# bq25887

./: Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
.github/workflows/: check.yml  nostd.yml
examples/: embassy.rs  embassy_stm32wba.rs
src/: bq25887.yaml  embassy.rs  lib.rs  registers.rs
tests/: bq25887_tests.rs
tools/generate_api/: Cargo.toml
tools/generate_api/src/: main.rs
