[package]
name = "bq25887"
version = "0.1.2"
description = "Device driver for the Texas Instruments BQ25887 linear battery chargers."
edition = "2024"
authors = ["Gerzain Mata <leftger@gmail.com>", "Tavish Srivastava <tavishsrivastava87@gmail.com>"]
repository = "https://github.com/leftger/bq25887"
license = "MIT OR Apache-2.0"
include = [
    "src/**/*.rs",
    "examples/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
    "memory.x",
    ".cargo/config.toml",
    "src/bq25887.yaml",
]
readme = "README.md"
keywords = ["battery", "charger", "embedded", "i2c", "power-management"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
device-driver = { version = "1.0.3", default-features = false, features = ["yaml"] }
defmt = { version = "0.3", optional = true, default-features = false }
cortex-m = { version = "0.7", optional = true, features = ["critical-section-single-core"] }
embassy-embedded-hal = { version = "0.5.0", default-features = false, optional = true }
embassy-sync = { version = "0.7.2", optional = true }
embedded-hal-async = "1.0.0"
log = { version = "0.4.22", optional = true }

[build-dependencies]
device-driver-generation = "1.0.7"
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
syn = { version = "2.0.111", features = ["full"] }

[dev-dependencies]
static_cell = "2"

[target.'cfg(not(target_os = "none"))'.dev-dependencies]
embassy-executor = { version = "0.9.1", features = ["arch-std"] }
futures = "0.3"

[target.'cfg(target_os = "none")'.dev-dependencies]
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
] }
embassy-futures = { version = "0.1.2" }
embassy-stm32 = { version = "0.4.0", features = [
    "stm32wba65ri",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "low-power",
    "defmt",
] }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0", features = ["tick-hz-32_768", "defmt-timestamp-uptime"] }
embassy-embedded-hal = { version = "0.5.0", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = "0.7"
defmt-rtt = "0.4"

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.clippy]
correctness = "forbid"
suspicious = "forbid"
perf = "forbid"
style = "forbid"
pedantic = "deny"

[features]
default = []

defmt-03 = [
    "dep:defmt",
    "device-driver/defmt-03",
]

embassy = [
    "dep:embassy-embedded-hal",
    "dep:embassy-sync",
    "dep:cortex-m",
]

log = ["dep:log"]
